Update fonts and re-apply them

--- a/fonts/demo.html
+++ b/fonts/demo.html
@@ -159,15 +159,15 @@
 <body>
 <div class="page">
     <div class="demo">
-        <h1 style="font-family: 'Heading Now Trial 04'; font-weight: normal; font-style: normal;">Heading Now Trial 04 Regular</h1>
+        <h1 style="font-family: 'Ferdinand'; font-weight: normal; font-style: normal;">Ferdinand</h1>
         <pre title="Usage">.your-style {
-    font-family: 'Heading Now Trial 04';
+    font-family: 'Ferdinand';
     font-weight: normal;
     font-style: normal;
 }</pre>
         <pre title="Preload (optional)">
-&lt;link rel=&quot;preload&quot; href=&quot;HeadingNowTrial-04Regular.woff2&quot; as=&quot;font&quot; type=&quot;font/woff2&quot; crossorigin&gt;</pre>
-        <div class="font-container" style="font-family: 'Heading Now Trial 04'; font-weight: normal; font-style: normal;">
+&lt;link rel=&quot;preload&quot; href=&quot;FerdinandRegular.woff2&quot; as=&quot;font&quot; type=&quot;font/woff2&quot; crossorigin&gt;</pre>
+        <div class="font-container" style="font-family: 'Ferdinand'; font-weight: normal; font-style: normal;">
             <p class="letters">
                 abcdefghijklmnopqrstuvwxyz<br>
 ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>
