Modify the nav bar to be fixed and vertical

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <li><a href="#">Ask for a brochure</a>, which includes signup form</li>
         <li><a href="#">Book a visit</a>!</li>
       </ol>
+
+      <h2>Lorem ipsum dolor</h2>
+
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem eius officia modi, delectus porro quia doloribus accusamus minima voluptates consequatur quos esse aspernatur? Ut sunt voluptatum consequatur quaerat mollitia animi dolores aperiam! Tempore adipisci vero asperiores illum iusto magnam laborum repudiandae culpa explicabo aspernatur ratione repellat, modi recusandae officiis commodi.</p>
   </section>
 
   <aside>
